--- a/.env-docker
+++ b/.env-docker
@@ -6,4 +6,5 @@ SERVER_PORT=8080
 CLIENT_URI=http://localhost:3000
 IPSTACK_ACCESS_KEY=4321
 AWS_ACCESS_KEY_ID=1234
-AWS_SECRET_ACCESS_KEY=abcdMASTER_PASSWORD=abcd
+AWS_SECRET_ACCESS_KEY=abcd
+MASTER_PASSWORD=abcd
