--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
   "dependencies": {
     "@firebase/app": "^0.6.10",
     "@hapi/glue": "^7.0.0",
+    "@hapi/hoek": "^10.0.0",
     "@hapi/nes": "^12.0.2",
     "@sentry/node": "^6.11.0",
     "aws-sdk": "^2.906.0",
     "bcryptjs": "^2.4.0",
     "chalk": "*",
-    "confidence": "^3.0.2",
+    "confidence": "^5.0.1",
     "core-js": "^3.6.5",
     "dotenv": "^2.0.0",
     "faker": "^4.1.0",
