--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - 27017:27017
     volumes:
       - "mongo_data:/data/db"
+      - "./utilities:/utilities"
     networks:
       - backend
     restart: always
