--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,9 @@
 JWT_SECRET=secret
 SMTP_PASSWORD=secret
 MONGODB_URI=mongodb://localhost:27017/mbt
+MONGODB_HOST=localhost:27017
+MONGODB_USER=admin
+MONGODB_PASSWORD=password
 SERVER_HOST=localhost
 SERVER_PORT=8080
 CLIENT_URI=http://localhost:3000
