--- a/package.json
+++ b/package.json
@@ -32,61 +32,62 @@
     ]
   },
   "engines": {
-    "node": ">=12.14.1",
-    "npm": ">=3.8.1"
+    "node": ">=16.13.2",
+    "npm": ">=8.1.2"
   },
   "dependencies": {
-    "@firebase/app": "^0.6.10",
-    "@hapi/glue": "^7.0.0",
-    "@hapi/nes": "^12.0.2",
+    "@firebase/app": "^0.7.24",
+    "@hapi/glue": "^8.0.0",
+    "@hapi/hoek": "^10.0.0",
+    "@hapi/nes": "^12.0.4",
     "@sentry/node": "^6.11.0",
     "aws-sdk": "^2.906.0",
     "bcryptjs": "^2.4.0",
     "chalk": "^4.0.0",
-    "confidence": "^3.0.2",
+    "confidence": "^5.0.1",
     "core-js": "^3.6.5",
     "dotenv": "^2.0.0",
     "elasticsearch": "^16.7.3",
     "faker": "^4.1.0",
-    "firebase": "^7.19.1",
-    "firebase-admin": "^8.13.0",
+    "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "handlebars": "^4.0.6",
     "hapi-auth-jwt2": "^10.0.0",
     "imagemagick": "^0.1.3",
-    "iplocation": "^5.0.0",
-    "jsonwebtoken": "^7.1.9",
-    "lodash": "4.17.15",
+    "iplocation": "^7.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "lodash-pickdeep": "^1.0.2",
     "node-fetch": "^2.6.0",
     "node-uuid": "^1.4.7",
-    "nodemailer": "^2.6.4",
-    "nodemailer-markdown": "^1.0.1",
+    "nodemailer": "^6.7.5",
     "owasp-password-strength-test": "^1.3.0",
-    "password-generator": "^2.2.0",
+    "password-generator": "^2.3.2",
     "q": "^1.4.1",
     "request-promise": "^4.2.2",
     "require-dir": "^0.3.2",
-    "rest-hapi": "^2.3.1",
+    "rest-hapi": "^3.0.1",
     "string-similarity": "^4.0.4",
+    "striptags": "^3.2.0",
     "useragent": "^2.3.0",
-    "youtube-captions-scraper": "^2.0.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "commander": "^5.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
-    "husky": "^0.14.3",
-    "jest": "^25.3.0",
-    "lint-staged": "^7.1.0",
+    "he": "^1.2.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.0",
+    "lint-staged": "^13.0.3",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.2",
-    "rewire": "^4.0.1"
+    "rewire": "^6.0.0"
   }
 }
